...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Lookup Symbol or Company Name" translatesAutoresizingMaskIntoConstraints="NO" id="dEY-bZ-TVQ">
                                <rect key="frame" x="0.0" y="20" width="320" height="64"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="G3e-pO-nnf"/>
                                </constraints>
                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartQuotesType="no"/>
                                <connections>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Company Name:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6QC-Qn-sT2" userLabel="Compan
                                        <rect key="frame" x="0.0" y="134.5" width="288" height="134"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LookupVC CompanyNameLbl" label="Company Name">
                                            <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exchange:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAy-1P-n8n" userLabel="Exchange" 
                                        <rect key="frame" x="0.0" y="268.5" width="288" height="134.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LookupVC ExchangeLbl" label="Stock Exchange">
                                            <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
